Cycles: The sun lamp from Nitisha sky is not included in the light tree. #103094

Closed
opened 2022-12-10 03:54:49 +01:00 by Alaska · 12 comments
Member

System Information
Operating system: Linux-6.0.0-5-amd64-x86_64-with-glibc2.36 64 Bits
Graphics card: NA

Blender Version
Broken version: 3.5.0 Alpha, branch: master, commit date: 2022-12-09 22:10, hash: 19d90c7a33
Worked: NA

Short description of error
The sun lamp used as part of the Nitisha sky texture is not included in the light tree which can lead to a increase in noise in some situations.

Exact steps for others to reproduce the error

  1. Open Blender.
  2. Change the render engine to Cycles.
  3. Add a sky texture to the "World Shader" and set the type to "Nishita" (Nishita is the default)
  4. Remove everything from the Nishita sky texture except the sun. (This can be down by setting Air, Dust, and Ozone to 0).
  5. Enter the rendered viewport and notice how the sun isn't being sampled often, and this is because the sun light isn't included in the light tree.
  6. Turn off the light tree and see the sun is being sampled.

Or download the file I've attached below (steps 1-4 already done).
Sky texture sun missing from light tree.blend

Notes:

  1. Adjusting the sun elevation and rotation will sometimes result in the sun being properly sampled. I assume this is because the sun is now in the right position to be captured in the importance map used by the light tree to help with sampling background lights.
  2. Increasing the sun disk size in the Nishita sky texture node will also result in improved sampling of sun with the light tree. I assume this is for the same reason as before. The sun disk is now captured in the importance map.

Here's a video showing the issue:
Light tree sky texture issue.mp4

**System Information** Operating system: Linux-6.0.0-5-amd64-x86_64-with-glibc2.36 64 Bits Graphics card: NA **Blender Version** Broken version: 3.5.0 Alpha, branch: master, commit date: 2022-12-09 22:10, hash: `19d90c7a33` Worked: NA **Short description of error** The sun lamp used as part of the Nitisha sky texture is not included in the light tree which can lead to a increase in noise in some situations. **Exact steps for others to reproduce the error** 1. Open Blender. 2. Change the render engine to Cycles. 3. Add a sky texture to the "World Shader" and set the type to "Nishita" (Nishita is the default) 4. Remove everything from the Nishita sky texture except the sun. (This can be down by setting `Air`, `Dust`, and `Ozone` to `0`). 5. Enter the rendered viewport and notice how the sun isn't being sampled often, and this is because the sun light isn't included in the light tree. 6. Turn off the `light tree` and see the sun is being sampled. Or download the file I've attached below (steps 1-4 already done). [Sky texture sun missing from light tree.blend](https://archive.blender.org/developer/F14048808/Sky_texture_sun_missing_from_light_tree.blend) Notes: 1. Adjusting the sun elevation and rotation will sometimes result in the sun being properly sampled. I assume this is because the sun is now in the right position to be captured in the importance map used by the light tree to help with sampling background lights. 2. Increasing the sun disk size in the Nishita sky texture node will also result in improved sampling of sun with the light tree. I assume this is for the same reason as before. The sun disk is now captured in the importance map. Here's a video showing the issue: [Light tree sky texture issue.mp4](https://archive.blender.org/developer/F14048804/Light_tree_sky_texture_issue.mp4)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Author
Member

Added subscribers: @weizhen, @brecht

Added subscribers: @weizhen, @brecht
Author
Member
CC @weizhen or @brecht

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Marking as high priority to ensure we look at this before the 3.5 release.

Marking as high priority to ensure we look at this before the 3.5 release.

Added subscriber: @silex

Added subscriber: @silex

Added subscriber: @Max-49

Added subscriber: @Max-49
Member

Added subscriber: @Jebbly

Added subscriber: @Jebbly
Author
Member

This information might be useful in fixing the issue.

During the development of the Nishita sky texture some changes had to be made to how the sun was sampled to make sure it worked in a consistent manner. Patch and the changes made can be found in here D7896

This information might be useful in fixing the issue. During the development of the Nishita sky texture some changes had to be made to how the sun was sampled to make sure it worked in a consistent manner. Patch and the changes made can be found in here [D7896](https://archive.blender.org/developer/D7896)

Added subscriber: @cassidy

Added subscriber: @cassidy
Jeffrey Liu self-assigned this 2022-12-30 06:00:53 +01:00

This issue was referenced by 05bdef7ce6

This issue was referenced by 05bdef7ce64fe3125b95d72d80f1f4f60c2b1274
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103094
No description provided.